Implemented DB for signup

--- a/public/index.html
+++ b/public/index.html
@@ -69,8 +69,8 @@
         </div>
 
         <div class="col-xs-6 col-md-4">
-          <form>
-            <div class="form-group" action="http://127.0.0.1:3000/signup" method="post">
+          <form class="form-group" action="http://127.0.0.1:3000/signup" method="post">
+            <div>
               <label for="userName">Name</label>
               <input type="text" class="form-control" id="userName" placeholder="Full Name" name="name">
             </div>
