login validation from Mongo

--- a/public/index.html
+++ b/public/index.html
@@ -52,7 +52,7 @@
             <li><form class="navbar-form navbar-left" action="http://127.0.0.1:3000/login" method="post">
             <div class="form-group">
               <input type="text" class="form-control" placeholder="User ID" name="userid1">
-              <input type="password" class="form-control" placeholder="Password">
+              <input type="password" class="form-control" placeholder="Password" name="pass1">
               <button type="submit" class="btn btn-default">Login</button>
             </div>
           </form></li>
