login validation done

--- a/public/index.html
+++ b/public/index.html
@@ -134,7 +134,7 @@
             data: { userid1: $('#userid1').val(), pass1: $('#password1').val() },
             success:function(res){
               console.log(res)
-              if(res=='no'){
+              if(res=="no"){
                 console.log('server response is', res);
                 alert('Invalid Username or Password'); 
               }              
