fixed validation, added buy button and logic

--- a/public/index.html
+++ b/public/index.html
@@ -140,7 +140,8 @@
               }              
               else
               {
-                $("html").html(res)
+                //$("html").html(res)
+                location.href = "http://127.0.0.1:3000/dashboard/?userid1=" + $('#userid1').val()
               }
           }});
 
